@@ -2,12 +2,12 @@ package com.movieplus.domain.service.impl;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.movieplus.domain.common.ObjectMapperCommonUtil;
 import com.movieplus.domain.db.read.RGenreTypeMapper;
 import com.movieplus.domain.entity.GenreType;
 import com.movieplus.domain.payload.request.GetInternalApiRequest;
@@ -15,7 +15,9 @@ import com.movieplus.domain.repository.GenreTypeRepository;
 import com.movieplus.domain.service.GenreTypeService;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class GenreTypeServiceImpl implements GenreTypeService {
@@ -27,23 +29,26 @@ public class GenreTypeServiceImpl implements GenreTypeService {
 	@Override
 	public List<String> save(List<GenreType> records) throws Exception {
 		try {
+			log.info("Do save with request: {}", ObjectMapperCommonUtil.writeValueAsString(records));
 			List<GenreType> movieInfos = repository.saveAll(records);
-			return movieInfos.stream().map(GenreType::getId).collect(Collectors.toList());
+			return movieInfos.stream()
+					.map(GenreType::getId)
+					.toList();
 		} catch (Exception e) {
-			throw new Exception(e.getMessage());
+			log.error("ERROR save: {}", e);
+			throw new Exception("Insert records fail");
 		}
 	}
 
 	@Override
-	public List<GenreType> getGenreType(GetInternalApiRequest request) throws Exception {
+	public List<GenreType> getGenreType(GetInternalApiRequest request) {
 		try {
-			List<Map<String, Object>> results = genreTypeMapper.selectWhere(request.getConditionStr(),
-					request.getLimit(), request.getOffset(), request.getOrderBys());
-			List<GenreType> genreTypes = objectMapper.convertValue(results, new TypeReference<List<GenreType>>() {
-			});
-			return genreTypes;
+			log.info("Do getGenreType with request: {}", ObjectMapperCommonUtil.writeValueAsString(request));
+			List<Map<String, Object>> results = genreTypeMapper.selectWhere(request.getConditionStr(),request.getLimit(), request.getOffset(), request.getOrderBys());
+			return objectMapper.convertValue(results, new TypeReference<List<GenreType>>() {});
 		} catch (Exception e) {
-			throw new Exception(e.getMessage());
+			log.error("ERROR getGenreType: {}", e);
+			return List.of();
 		}
 	}
 
