@@ -2,14 +2,13 @@ package com.movieplus.domain.service.impl;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.movieplus.domain.common.ObjectMapperCommonUtil;
 import com.movieplus.domain.db.read.RMovieStarMapper;
-import com.movieplus.domain.entity.MovieBanner;
 import com.movieplus.domain.entity.MovieStar;
 import com.movieplus.domain.payload.request.GetInternalApiRequest;
 import com.movieplus.domain.repository.MovieStarRepository;
@@ -30,23 +29,26 @@ public class MovieStarServiceImpl implements MovieStarService {
 	@Override
 	public List<String> save(List<MovieStar> records) throws Exception {
 		try {
+			log.info("Do save with request: {}", ObjectMapperCommonUtil.writeValueAsString(records));
 			List<MovieStar> movieStars = repository.saveAll(records);
 			return movieStars.stream()
 					.map(MovieStar::getId)
-					.collect(Collectors.toList());
+					.toList();
 		} catch (Exception e) {
-			throw new Exception();
+			log.error("ERROR save: {}", e);
+			throw new Exception("Insert records fail");
 		}
 	}
 	
 	@Override
-	public List<MovieStar> getMovieStar(GetInternalApiRequest request) throws Exception {
+	public List<MovieStar> getMovieStar(GetInternalApiRequest request) {
 		try {
+			log.info("Do save with request: {}", ObjectMapperCommonUtil.writeValueAsString(request));
 			List<Map<String, Object>> results = mapper.selectWhere(request.getConditionStr(), request.getLimit(), request.getOffset(), request.getOrderBys());
-			List<MovieStar> movieStars = objectMapper.convertValue(results, new TypeReference<List<MovieStar>>() {});
-			return movieStars;
+			return objectMapper.convertValue(results, new TypeReference<List<MovieStar>>() {});
 		} catch (Exception e) {
-			throw new Exception();
+			log.error("ERROR save: {}", e);
+			return List.of();
 		}
 	}
 
