@@ -2,14 +2,13 @@ package com.movieplus.domain.service.impl;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.movieplus.domain.common.ObjectMapperCommonUtil;
 import com.movieplus.domain.db.read.RStarInfoMapper;
-import com.movieplus.domain.entity.MovieBanner;
 import com.movieplus.domain.entity.StarInfo;
 import com.movieplus.domain.payload.request.GetInternalApiRequest;
 import com.movieplus.domain.repository.StarInfoRepository;
@@ -30,23 +29,26 @@ public class StarInfoServiceImpl implements StarInfoService{
 	@Override
 	public List<String> save(List<StarInfo> records) throws Exception {
 		try {
+			log.info("Do save with request: {}", ObjectMapperCommonUtil.writeValueAsString(records));
 			List<StarInfo> starInfos = repository.saveAll(records);
 			return starInfos.stream()
 					.map(StarInfo::getId)
-					.collect(Collectors.toList());
+					.toList();
 		} catch (Exception e) {
-			throw new Exception();
+			log.error("ERROR save: {}", e);
+			throw new Exception("Insert records fail");
 		}
 	}
 
 	@Override
 	public List<StarInfo> getStarInfo(GetInternalApiRequest request) throws Exception {
 		try {
+			log.info("Do getStarInfo with request: {}", ObjectMapperCommonUtil.writeValueAsString(request));
 			List<Map<String, Object>> results = mapper.selectWhere(request.getConditionStr(), request.getLimit(), request.getOffset(), request.getOrderBys());
-			List<StarInfo> starInfos = objectMapper.convertValue(results, new TypeReference<List<StarInfo>>() {});
-			return starInfos;
+			return objectMapper.convertValue(results, new TypeReference<List<StarInfo>>() {});
 		} catch (Exception e) {
-			throw new Exception();
+			log.error("ERROR getStarInfo: {}", e);
+			return List.of();
 		}
 	}
 }
